--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Favorite Movie</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href= "E.css">
+<link rel="stylesheet" href= "style.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
 <style>
         body {
@@ -22,7 +22,7 @@
 </div>
 .audio-player {
     margin: 10px auto;
-    max-width: 50px; 
+    max-width: 40px; 
 }
 
 .audio-player audio,
@@ -43,6 +43,7 @@
   <header class="E-xlarge E-padding-1255">
     <a href="https://www.youtube.com/watch?v=nA8KmHC2Z-g">Trailer</a>
     <a href="https://en.wikipedia.org/wiki/Akira_(1988_film)">About</a>
+          
   </header>
 <div class="audio-player"><iframe width="20%" height="30%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/6930116&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/surrealisticmind" title="Khahro Luna" target="_blank" style="color: #cccccc; text-decoration: none;">Khahro Luna</a> · <a href="https://soundcloud.com/surrealisticmind/emancipator-soon-it-will-be-cold-enough-to-build-fires" title="Emancipator - soon it will be cold enough to build fires" target="_blank" style="color: #cccccc; text-decoration: none;">Emancipator - soon it will be cold enough to build fires</a></div>
 </div>
