--- a/index.html
+++ b/index.html
@@ -40,29 +40,23 @@
             <div class="slideshow-container">
                 <div class="slide">
                     <img src="https://i.pinimg.com/originals/c9/76/d2/c976d2511d0c7dc6304bfdbb7c565ff3.gif" alt="Bike Chase Opening">
-                    <div class="caption">Bike Chase Opening: Kaneda’s gang clashes with the Clowns, ending with Kaneda’s legendary bike slide to dodge Joker.<button class="prev">❮ Prev</button>
-                <button class="next">Next ❯</button></div>
+                    <div class="caption">Bike Chase Opening: Kaneda’s gang clashes with the Clowns, ending with Kaneda’s legendary bike slide to dodge Joker.</div>
                 </div>
                 <div class="slide">
                     <img src="https://media.tenor.com/i7WRjBGy0fUAAAAM/anime-crash.gif" alt="Tetsuo’s Mutation">
-                    <div class="caption">Tetsuo Meets the Chidren that activate akira's power <button class="prev">❮ Prev</button>
-                <button class="next">Next ❯</button></div>
+                    <div class="caption">Tetsuo Meets the Chidren that activate akira's power <button class="prev">
                 </div>
                 <div class="slide">
                     <img src="https://images.saymedia-content.com/.image/t_share/MTc2MjY0Mjg4NzkyMjI0OTU4/neo-tokyo-is-about-to-explode-akira-1988.jpg" alt="Neo-Tokyo Riots">
-                    <div class="caption">Neo-Tokyo Riots: Neon-lit streets erupt in chaos as protesters face off against police, showcasing societal unrest.<button class="prev">❮ Prev</button>
-                <button class="next">Next ❯</button></div>
+                    <div class="caption">Neo-Tokyo Riots: Neon-lit streets erupt in chaos as protesters face off against police, showcasing societal unrest.>
                 </div>
                 <div class="slide">
                     <img src="https://www.slashfilm.com/img/gallery/the-anime-classic-akira-foresaw-the-2020-tokyo-summer-olympics-and-its-empty-stadium/intro-import.jpg" alt="Olympic Stadium Battle">
-                    <div class="caption">Olympic Stadium Battle: Kaneda battles Tetsuo amidst psychic energy distortions in a climactic showdown.</div><button class="prev">❮ Prev</button>
-                <button class="next">Next ❯</button>
+                    <div class="caption">Olympic Stadium Battle: Kaneda battles Tetsuo amidst psychic energy distortions in a climactic showdown.</div>
                 </div>
                 <div class="slide">
                     <img src="https://media.tenor.com/J4AYBuSgo58AAAAM/akira-tetsuo.gif">Akira’s Awakening: Tetsuo unleashes a cosmic event, echoing Akira’s destructive power with dazzling light effects.</div>
                 </div>
-                <button class="prev">❮ Prev</button>
-                <button class="next">Next ❯</button>
             </div>
         </section>
 
