--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite Movie - Akira</title>
-    <link rel="stylesheet" href="TM.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Georgia&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -67,6 +67,6 @@
             
         </footer>
     </div>
-    <script src="TM.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
