--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A tribute to Akira (1988) with a slideshow, video, and dynamic design.">
     <title>Favorite Movie - Akira</title>
-    <link rel="stylesheet" href="TM.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:400,700&family=Georgia&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -83,6 +83,6 @@
                         <p>Created by Sean592510</p>
         </footer>
     </div>
-    <script src="TM.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
